# typescript-axios-client-generated/models/cast-vote-request-data.ts
@@ -35,4 +35,10 @@ export interface CastVoteRequestData {
      * @memberof CastVoteRequestData
      */
     optionId?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof CastVoteRequestData
+     */
+    signature?: string | null;
 }
