# typescript-axios-client-generated/models/create-user-request-data.ts
@@ -41,4 +41,10 @@ export interface CreateUserRequestData {
      * @memberof CreateUserRequestData
      */
     email?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof CreateUserRequestData
+     */
+    publicKey?: string | null;
 }
