# typescript-axios-client-generated/models/index.ts
@@ -24,6 +24,10 @@ export * from './get-event-response-document';
 export * from './get-user-response-document';
 export * from './iuser';
 export * from './ivoting';
+export * from './patch-event-motion-request-data';
+export * from './patch-event-motion-request-document';
+export * from './patch-event-request-data';
+export * from './patch-event-request-document';
 export * from './post-event-request-data';
 export * from './post-event-request-document';
 export * from './user';
